syntax = "proto3";

option csharp_namespace = "ProjectX.Protobuf.Protos.Models";

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
  bool isSuccess = 2;
  string errorMessage = 3;
}

message RegisterRequest {
  string login = 1;
  string email = 2;
  string password = 3;
}

message RegisterReply{
  string token = 1;
  bool isSuccess = 2;
  string errorMessage = 3;
}